--- a/ansible/playbooks/roles/python3/tasks/main.yml
+++ b/ansible/playbooks/roles/python3/tasks/main.yml
@@ -16,7 +16,7 @@
       - sqlite
       - sqlite-devel
       - gdbm-devel
-      - db4-devel
+      # - db4-devel
       - expat-devel
       - libpcap-devel
       - xz-devel
